# CCL

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
dashboard/: dashboard.js  index.html  styles.css
docs/: API.md  ARCHITECTURE.md
enclave/: Cargo.toml
enclave/core/: attestation.rs  enclave.rs  sealed_storage.rs
server/: api.py
server/routes/: enclave.py  sev.py
server/security/: kms_mock.py  logs.py
server/simulation/: enclave_runtime.py
server/workloads/: workloads.py
sev/: encrypted_memory.py  launch_flow.py  vm_model.py
tests/: test_enclave.py  test_kms.py  test_sev.py
