[project]
name = "confidential-computing-lab"
version = "0.1.0"
description = "Educational confidential computing lab with SGX and SEV simulations"
authors = [{name = "Confidential Computing Lab"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "ruff>=0.6.0",
    "black>=24.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server", "server.*", "sev", "sev.*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "D", "I", "PL"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
